Remove old stylesheet

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <!-- TODO -->
     <link rel="shortcut icon" href="img/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="https://austindelamar.com/osseous/css/osseous.css"/>
     <script type="text/javascript" src="js/script.js"></script>
-    
-    <title>Oddox - Open-Source Blogging Platform</title>
+
+    <title>Oddox - Offline-first, Open-Source, Blogging Platform</title>
 </head>
 <body>
 
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="twelve columns u-center">
             <h1 class="u-uppercase" style="margin-top:15px;margin-bottom:15px;letter-spacing:3px;">ODDOX</h1>
-            <p style="margin:5px;">Open-Source Blogging Platform that Syncs!</p>
+            <p style="margin:5px;">Offline-first, Open-Source, Blogging Platform that Syncs!</p>
             <p style="margin:15px">
                 <a target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter" style="font-size:1.2em"></span>&nbsp;oddoxorg</a>&nbsp;&nbsp;
                 <a target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github" style="font-size:1.2em"></span>&nbsp;oddoxorg</a>
