Cleanup repo structure

--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
     <!-- TODO -->
     <!-- Google+ Schema.org -->
     <!-- TODO -->
-    <link rel="shortcut icon" href="img/favicon.ico"/>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico"/>
+    <link rel="shortcut icon" href="static/img/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="static/img/favicon.ico"/>
     <link rel="stylesheet" href="https://austindelamar.com/osseous/1.0.0/osseous.min.css"/>
-    <link rel="stylesheet" href="icomoon/icomoon.css?v=2">
+    <link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
 
     <title>Oddox - Offline-first, Open-Source, Blogging Platform</title>
-    <style>
-        html,body{height: 81%;}
-        :root{--gradient:linear-gradient(0deg, rgba(255, 255, 255, 0) 50%, #ffffff), linear-gradient(70deg, #eaf5ff 32%, #f6fff8);}
-    </style>
 </head>
 <body>
 
@@ -66,7 +62,7 @@
 
 
 <!-- Landing logo, title, and subtitle. -->
-<header class="row padding-top-large margin-top-large border-bottom" style="background-image:var(--gradient);">
+<header class="row padding-top-large margin-top-large border-bottom" style="background-image:linear-gradient(0deg, rgba(255, 255, 255, 0) 50%, #ffffff), linear-gradient(70deg, #eaf5ff 32%, #f6fff8);">
     <div class="container text-center">
         <div class="twelve columns">
             <div class="container padding-top-large margin-top-large"></div>
@@ -99,7 +95,7 @@
 
 
 <!-- Footer at bottom -->
-<footer class="row section text-center" style="height:50%;background-image:var(--gradient);">
+<footer class="row section text-center">
   <p><small><em>© <a href="https://oddox.org">Oddox</a> - 2017</em></small></p>
   <a class="button button-blue" title="Back to top" href="javascript:gotoTop()">Back to Top</a>
 </footer>
