Add touch icons for different browsers/devices

--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="author" content="Oddox">
-    <meta name="keywords" content="oddox,blog,open,source,blogging,platform"/>
-    <meta name="description" content="Oddox is an open-source blogging platform."/>
-    <meta name="robots" content="all"/>
-    <!-- Facebook Open Graph -->
-    <!-- TODO -->
-    <!-- Twitter Card -->
-    <!-- TODO -->
-    <!-- Google+ Schema.org -->
-    <!-- TODO -->
-    <link rel="shortcut icon" href="static/img/favicon.ico"/>
-    <link rel="icon" type="image/x-icon" href="static/img/favicon.ico"/>
-    <link rel="stylesheet" href="https://austindelamar.com/osseous/1.0.0/osseous.min.css"/>
-    <link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
+  <meta charset="utf-8"/>
+  <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="author" content="Oddox">
+  <meta name="keywords" content="oddox,blog,open,source,blogging,platform"/>
+  <meta name="description" content="Oddox is an open-source blogging platform."/>
+  <meta name="robots" content="all"/>
 
-    <title>Oddox - Offline-first, Open-Source, Blogging Platform</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
+  <link rel="manifest" href="static/manifest.json">
+  <link rel="mask-icon" href="static/safari-pinned-tab.svg" color="#67d9b8">
+  <meta name="msapplication-config" content="static/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+  <link rel="shortcut icon" href="favicon.ico"/>
+  <link rel="stylesheet" href="https://austindelamar.com/osseous/1.2.0/osseous.min.css"/>
+  <link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
+  <title>Oddox - Offline-first Blog that Syncs!</title>
 </head>
 <body>
 
@@ -45,7 +46,7 @@
 <nav class="navbar border-bottom">
     <div class="navbar-body container">
       <div class="nav-item-logo">
-          <a href="#"><span class="text-medium text-thin text-uppercase text-wide">Oddox</span></a>
+          <a href="#"><img src="assets/logo-dark.png" class="full-width" style="opacity:.6;padding:.5rem" alt="Oddox" /></a>
       </div>
       <div class="nav-small-menu">
           <a class="nav-item" title="Open Menu" href="javascript:openSidebar()">
@@ -62,14 +63,13 @@
 
 
 <!-- Landing logo, title, and subtitle. -->
-<header class="row padding-top-large margin-top-large border-bottom" style="background-image:linear-gradient(0deg, rgba(255, 255, 255, 0) 50%, #ffffff), linear-gradient(70deg, #eaf5ff 32%, #f6fff8);">
+<header class="row padding-top-large margin-top-large border-bottom" style="background-image:linear-gradient(0deg, #def4ee 70%, #ffffff);">
     <div class="container text-center">
         <div class="twelve columns">
-            <div class="container padding-top-large margin-top-large"></div>
+            <img src="assets/icon-transparent-512.png" style="max-width:20rem;" class="full-width" />
         </div>
         <div class="twelve columns">
-            <h1 class="text-uppercase text-thinner text-wide">Oddox</h1>
-            <p>Offline-first, Open-Source, Blogging Platform.</p>
+            <p>An offline-first blogging application</p>
 
             <!-- Call to action -->
             <p>
@@ -101,7 +101,7 @@
 </footer>
 
 <!-- Lazy load JavaScript, mainly for navigation -->
-<script type="text/javascript" src="https://austindelamar.com/osseous/1.0.0/osseous.min.js"></script>
+<script type="text/javascript" src="https://austindelamar.com/osseous/1.2.0/osseous.min.js"></script>
 
 </body>
 </html>
