--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
   <meta name="description" content="Oddox is an open-source blogging platform."/>
   <meta name="robots" content="all"/>
 
+  <!-- Facebook Open Graph -->
+  <meta property="og:url" content="https://oddox.org"/>
+  <meta property="og:type" content="product"/>
+  <meta property="og:locale" content="en_US"/>
+  <meta property="og:title" content="Oddox"/>
+  <meta property="og:image" content="assets/icon-circle-light-512.png"/>
+  <meta property="og:image:type" content="image/png"/>
+  <meta property="og:image:width" content="512"/>
+  <meta property="og:image:height" content="512"/>
+  <meta property="og:description" content="Offline-first Blog that Syncs!"/>
+  <meta property="og:site_name" content="Oddox" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@Oddox"/>
+  <meta name="twitter:creator" content="@amdelamar"/>
+  <meta name="twitter:title" content="Oddox"/>
+  <meta name="twitter:description" content="Offline-first Blog that Syncs!"/>
+  <meta name="twitter:image" content="assets/icon-circle-light-512.png"/>
+  <meta name="twitter:domain" content="oddox.org"/>
+
+  <!-- Google+ Schema.org -->
+  <meta itemprop="name" content="Oddox"/>
+  <meta itemprop="description" content="Offline-first Blog that Syncs!"/>
+  <meta itemprop="image" content="assets/icon-circle-light-512.png"/>
+
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
