--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <meta property="og:type" content="product"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:title" content="Oddox"/>
-  <meta property="og:image" content="assets/logo.png"/>
+  <meta property="og:image" content="assets/icon-light-256.png"/>
   <meta property="og:image:type" content="image/png"/>
-  <meta property="og:image:width" content="579"/>
-  <meta property="og:image:height" content="152"/>
+  <meta property="og:image:width" content="256"/>
+  <meta property="og:image:height" content="256"/>
   <meta property="og:description" content="Offline-first Blog that Syncs!"/>
   <meta property="og:site_name" content="Oddox" />
 
