--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:type" content="product"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:title" content="Oddox"/>
-  <meta property="og:image" content="assets/icon-light-256.png"/>
+  <meta property="og:image" content="/assets/icon-light-256.png"/>
   <meta property="og:image:type" content="image/png"/>
   <meta property="og:image:width" content="256"/>
   <meta property="og:image:height" content="256"/>
@@ -28,13 +28,13 @@
   <meta name="twitter:creator" content="@amdelamar"/>
   <meta name="twitter:title" content="Oddox"/>
   <meta name="twitter:description" content="Offline-first Blog that Syncs!"/>
-  <meta name="twitter:image" content="assets/icon-circle-light-512.png"/>
+  <meta name="twitter:image" content="/assets/icon-circle-light-512.png"/>
   <meta name="twitter:domain" content="oddox.org"/>
 
   <!-- Google+ Schema.org -->
   <meta itemprop="name" content="Oddox"/>
   <meta itemprop="description" content="Offline-first Blog that Syncs!"/>
-  <meta itemprop="image" content="assets/icon-circle-light-512.png"/>
+  <meta itemprop="image" content="/assets/icon-circle-light-512.png"/>
 
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
