Add larger social media thumbnail

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Oddox">
-  <meta name="keywords" content="oddox,blog,open,source,blogging,platform"/>
-  <meta name="description" content="Oddox is an open-source blogging platform."/>
+  <meta name="keywords" content="oddox,blog,open,source,offline-first,sync,blogging,platform,application"/>
+  <meta name="description" content="Oddox is an offline-first blog that syncs! Write, save, and publish your posts then sync later when you're connected."/>
   <meta name="robots" content="all"/>
 
   <!-- Facebook Open Graph -->
@@ -15,11 +15,11 @@
   <meta property="og:type" content="product"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:title" content="Oddox"/>
-  <meta property="og:image" content="/assets/icon-light-256.png"/>
+  <meta property="og:image" content="/assets/logo-social-media.png"/>
   <meta property="og:image:type" content="image/png"/>
-  <meta property="og:image:width" content="256"/>
-  <meta property="og:image:height" content="256"/>
-  <meta property="og:description" content="Offline-first Blog that Syncs!"/>
+  <meta property="og:image:width" content="600"/>
+  <meta property="og:image:height" content="314"/>
+  <meta property="og:description" content="Oddox is an offline-first blog that syncs! Write, save, and publish your posts then sync later when you're connected."/>
   <meta property="og:site_name" content="Oddox" />
 
   <!-- Twitter Card -->
@@ -27,14 +27,14 @@
   <meta name="twitter:site" content="@Oddox"/>
   <meta name="twitter:creator" content="@amdelamar"/>
   <meta name="twitter:title" content="Oddox"/>
-  <meta name="twitter:description" content="Offline-first Blog that Syncs!"/>
-  <meta name="twitter:image" content="/assets/icon-circle-light-512.png"/>
+  <meta name="twitter:description" content="Oddox is an offline-first blog that syncs! Write, save, and publish your posts then sync later when you're connected."/>
+  <meta name="twitter:image" content="/assets/logo-social-media.png"/>
   <meta name="twitter:domain" content="oddox.org"/>
 
   <!-- Google+ Schema.org -->
   <meta itemprop="name" content="Oddox"/>
-  <meta itemprop="description" content="Offline-first Blog that Syncs!"/>
-  <meta itemprop="image" content="/assets/icon-circle-light-512.png"/>
+  <meta itemprop="description" content="Oddox is an offline-first blog that syncs! Write, save, and publish your posts then sync later when you're connected."/>
+  <meta itemprop="image" content="/assets/logo-social-media.png"/>
 
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
