Remove full-width from logo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <nav class="navbar border-bottom">
     <div class="navbar-body container">
       <div class="nav-item-logo">
-          <a href="#"><img src="assets/logo-dark.png" class="full-width" style="opacity:.6;padding:.5rem" alt="Oddox" /></a>
+          <a href="#"><img src="assets/logo-dark.png" style="opacity:.6;padding:.5rem" alt="Oddox" /></a>
       </div>
       <div class="nav-small-menu">
           <a class="nav-item" title="Open Menu" href="javascript:openSidebar()">
