--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
   <meta itemprop="image" content="/assets/logo-social-media.png"/>
 
   <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
   <link rel="manifest" href="static/manifest.json">
   <link rel="mask-icon" href="static/safari-pinned-tab.svg" color="#67d9b8">
   <meta name="msapplication-config" content="static/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#67d9b8">
 
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="https://austindelamar.com/osseous/1.2.0/osseous.min.css"/>
