--- a/download.html
+++ b/download.html
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="https://austindelamar.com/osseous/1.2.0/osseous.min.css" />
 	<link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
 	<link rel="stylesheet" href="css/style.css?v=1">
-	<title>Oddox - Open source blog with an offline-first editor</title>
+	<title>Download Oddox</title>
 </head>
 
 <body>
@@ -59,8 +59,7 @@
       </a>
 		</div>
 		<div class="nav-list text-center" onclick="closeSidebar()">
-			<a class="nav-item" href="#download">Download</a>
-			<a class="nav-item" href="#examples">Samples</a>
+			<a class="nav-item" href="/#examples">Samples</a>
 			<a class="nav-item" href="https://github.com/oddoxorg/">GitHub</a>
 		</div>
 		<div class="padding-top-large full-width text-center">
@@ -88,8 +87,7 @@
         </a>
 			</div>
 			<div class="nav-group nav-large-menu text-bold">
-				<a class="nav-item text-white" href="#download">Download</a>
-				<a class="nav-item text-white" href="#examples">Examples</a>
+				<a class="nav-item text-white" href="/#examples">Examples</a>
 				<a class="nav-item text-white" href="https://github.com/oddoxorg/">GitHub</a>
 			</div>
 		</div>
@@ -97,14 +95,8 @@
 
 	<header class="row padding-top background-solid-theme text-white" style="background: linear-gradient(180deg,#67d9b8 0%,#4da088 100%);">
 		<div class="container text-center">
-			<div class="twelve columns padding-top-large">
+			<div class="twelve columns padding-top-large padding-bottom-large">
 				<img src="assets/logo-transparent.png" style="max-width:40rem;" class="padding--top-large padding-left-large padding-right-large full-width" />
-			</div>
-			<div class="twelve columns padding-bottom-large">
-				<h3 class="padding">open source blog with offline-first writer</h3>
-				<p></p>
-				<a href="#download" class="button button-white">Download</a>&nbsp;
-				<a href="#examples" class="button button-white button-white-outline">View Samples</a>
 			</div>
 		</div>
 	</header>
@@ -112,58 +104,67 @@
 
 	<div id="ads" class="row section">
 		<div class="container">
+      <h2>Download &amp; Install</h2>
 
+      <p>Oddox has three important parts.</p>
+      <ol>
+        <li>Oddox server</li>
+        <li>Oddox Offline-first dashboard</li>
+        <li>CouchDB-compatible database (Like Cloudant, PouchDB, or Couchbase)</li>
+      </ol>
+      <p>Choose from the software below to setup or update your blog.</p>
+
+      <hr class="margin-top"/>
+
+      <h3>Oddox Server</h3>
 			<div class="row">
 				<div class="four columns text-center">
 					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Focus on writing</h4>
-					<p>Write, save, and publish your posts without an internet connection, then sync later when you're connected.</p>
+					<h4>Windows</h4>
+					<p>Latest | Beta</p>
 				</div>
 				<div class="four columns text-center">
 					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Organize your posts</h4>
-					<p>Create tags, categories, featured favorites, draft wild ideas, and even recover scrapped ones later from the bin.</p>
+					<h4>Mac</h4>
+					<p>Latest | Beta</p>
 				</div>
 				<div class="four columns text-center">
 					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Collaborate with others</h4>
-					<p>Invite co-authors to your post or editors to proof-read it before its published.</p>
+					<h4>Linux</h4>
+					<p>Latest | Beta</p>
 				</div>
 			</div>
-		</div>
-	</div>
 
-	<div id="download" class="section text-center background-solid-black text-grey">
-		<div class="container">
-			<h2>Try it out, its free</h2>
-			<p>Oddox is a new way to write, distraction free.</p>
-			<a href="/download.html" class="button button-white button-white-outline">Download</a>
-		</div>
-	</div>
+      <hr class="margin-top"/>
 
-	<div id="samples" class="row section">
-		<div class="container">
-			<h2>Samples</h2>
-
-			<p>View blog designs and templates designed by our team.</p>
-
-			<div class="row padding-top padding-bottom">
+      <h3>Offline-first Dashboard</h3>
+			<div class="row">
 				<div class="four columns text-center">
 					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Sample A</h4>
-					<p>Minimalistic theme.</p>
+					<h4>For Web Browsers</h4>
+					<p>Latest | Beta</p>
 				</div>
-				<div class="four columns text-center">
-					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Sample B</h4>
-					<p>Fully featured theme.</p>
-				</div>
-				<div class="four columns text-center">
-					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
-					<h4>Sample C</h4>
-					<p>Plain-text only theme.</p>
-				</div>
+        <div class="eight columns">&nbsp;</div>
 			</div>
+
+      <hr class="margin-top"/>
+
+      <h3>CouchDB database</h3>
+			<div class="row">
+				<div class="four columns text-center">
+					<div style="height:15rem;max-height:15rem;" class="background-solid-lightgrey round full-width"></div>
+					<h4>Docker container</h4>
+					<p>Latest | Beta</p>
+				</div>
+        <div class="eight columns">&nbsp;</div>
+			</div>
+
+      <hr class="margin-top"/>
+
+      <p class="text-center">
+        See something missing? Let us know and we can consider adding it!<br/><br/>
+			  <a href="/contact.html" class="button button-blue button-blue-outline">Contact Us</a>
+      </p>
 		</div>
 	</div>
 
@@ -175,57 +176,6 @@
         <br/>
         Please come back again later!</p>
         <p class="text-bold">Thank you!</p>
-		</div>
-	</div>
-
-  <div id="features" class="section text-center background-solid-black text-grey">
-		<div class="container">
-			<h2>Lots of great features</h2>
-			<p>Here is a big list of things Oddox can do.</p>
-
-      <div class="row padding-top padding-bottom">
-				<div class="four columns offset-by-two">
-          <ul class="text-left">
-            <li>Offline-first dashboard</li>
-            <li>One-click synchronize</li>
-            <li>Multi-author enabled</li>
-            <li>Co-authors and editors</li>
-            <li>Tag posts</li>
-            <li>Categorize posts</li>
-            <li>Publish in the future</li>
-            <li>Save drafts</li>
-            <li>Feature "starred" posts</li>
-            <li>Recover from trash</li>
-            <li>Clean default theme</li>
-            <li>Extend/customize themes</li>
-            <li>Admin role</li>
-            <li>Cloud and Containerized</li>
-            <li>Free!</li>
-          </ul>
-        </div>
-        <div class="six columns">
-          <ul class="text-left">
-            <li>Responsive interface</li>
-            <li>PBKDF2 encrypted passwords</li>
-            <li>Backup with CouchDB</li>
-            <li>HTTP/2 enabled</li>
-            <li>HTTPS default</li>
-            <li>Easy installation</li>
-            <li>Author bios</li>
-            <li>Search posts</li>
-            <li>Thumbnails for posts</li>
-            <li>Banner pictures</li>
-            <li>Author profile pictures</li>
-            <li>List all authors</li>
-            <li>List all categories</li>
-            <li>List all tags</li>
-            <li>Open source!</li>
-          </ul>
-        </div>
-      </div>
-
-      <p>See something missing? Let us know and we can consider adding it!</p>
-			<a href="/download.html" class="button button-white button-white-outline">Download</a>
 		</div>
 	</div>
 
