--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="nav-list text-center" onclick="closeSidebar()">
 			<a class="nav-item" href="#download">Download</a>
-			<a class="nav-item" href="#examples">Samples</a>
+			<a class="nav-item" href="#samples">Samples</a>
 			<a class="nav-item" href="https://github.com/oddoxorg/">GitHub</a>
 		</div>
 		<div class="padding-top-large full-width text-center">
@@ -89,7 +89,7 @@
 			</div>
 			<div class="nav-group nav-large-menu text-bold">
 				<a class="nav-item text-white" href="#download">Download</a>
-				<a class="nav-item text-white" href="#examples">Examples</a>
+				<a class="nav-item text-white" href="#samples">Samples</a>
 				<a class="nav-item text-white" href="https://github.com/oddoxorg/">GitHub</a>
 			</div>
 		</div>
