Fix download page links

--- a/download.html
+++ b/download.html
@@ -78,7 +78,7 @@
 			<div class="nav-item-logo">
 				<a href="/">
             <img src="assets/icon-transparent-512.png" alt="Logo" class="margin-left margin-right" alt="Oddox" />
-            <span class="text-medium text-wide text-white">oddox</span>
+            <span class="text-medium text-wide text-white">Oddox</span>
           </a>
 			</div>
 			<div class="nav-small-menu">
