--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </a>
 		</div>
 		<div class="nav-list text-center" onclick="closeSidebar()">
-			<a class="nav-item" href="#download">Download</a>
+			<a class="nav-item" href="/download">Download</a>
 			<a class="nav-item" href="#samples">Samples</a>
 			<a class="nav-item" href="https://github.com/oddoxorg/">GitHub</a>
 		</div>
@@ -79,7 +79,7 @@
 			<div class="nav-item-logo">
 				<a href="/">
             <img src="assets/icon-transparent-512.png" alt="Logo" class="margin-left margin-right" alt="Oddox" />
-            <span class="text-medium text-wide text-white">oddox</span>
+            <span class="text-medium text-wide text-white">Oddox</span>
           </a>
 			</div>
 			<div class="nav-small-menu">
@@ -88,7 +88,7 @@
         </a>
 			</div>
 			<div class="nav-group nav-large-menu text-bold">
-				<a class="nav-item text-white" href="#download">Download</a>
+				<a class="nav-item text-white" href="/download">Download</a>
 				<a class="nav-item text-white" href="#samples">Samples</a>
 				<a class="nav-item text-white" href="https://github.com/oddoxorg/">GitHub</a>
 			</div>
@@ -103,8 +103,8 @@
 			<div class="twelve columns padding-bottom-large">
 				<h3 class="padding">open source blog with offline-first writer</h3>
 				<p></p>
-				<a href="#download" class="button button-white">Download</a>&nbsp;
-				<a href="#examples" class="button button-white button-white-outline">View Samples</a>
+				<a href="/download" class="button button-white">Download</a>&nbsp;
+				<a href="#samples" class="button button-white button-white-outline">View Samples</a>
 			</div>
 		</div>
 	</header>
@@ -136,8 +136,8 @@
 	<div id="download" class="section text-center background-solid-black text-grey">
 		<div class="container">
 			<h2>Try it out, its free</h2>
-			<p>Oddox is a new way to write, distraction free.</p>
-			<a href="/download.html" class="button button-white button-white-outline">Download</a>
+			<p>Oddox is a new way to write for blogs.</p>
+			<a href="/download" class="button button-white button-white-outline">Download</a>
 		</div>
 	</div>
 
@@ -225,7 +225,7 @@
       </div>
 
       <p>See something missing? Let us know and we can consider adding it!</p>
-			<a href="/download.html" class="button button-white button-white-outline">Download</a>
+			<a href="/download" class="button button-white button-white-outline">Download</a>
 		</div>
 	</div>
 
