Update links to other pages

--- a/download.html
+++ b/download.html
@@ -163,7 +163,7 @@
 
       <p class="text-center">
         See something missing? Let us know and we can consider adding it!<br/><br/>
-			  <a href="/contact.html" class="button button-blue button-blue-outline">Contact Us</a>
+			  <a href="/contact" class="button button-blue button-blue-outline">Contact Us</a>
       </p>
 		</div>
 	</div>
@@ -180,6 +180,12 @@
 	</div>
 
 	<footer class="row section text-center background-solid-theme" style="background: linear-gradient(0deg,#67d9b8 0%,#4da088 100%);">
+    <span class="text-bold">
+      <a href="/" class="text-black border-none">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/contact" class="text-black border-none">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/about" class="text-black border-none">About</a>
+    </span>
 		<p>Oddox is an open source project licensed under Apache 2.0 and MIT.</p>
 		<p>
 			<a target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
