--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="author" content="Oddox">
 	<meta name="keywords" content="oddox,blog,open,source,offline,first,sync,couchdb,pouchdb,blogging,platform,application" />
-	<meta name="description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta name="description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta name="robots" content="all" />
 
 	<!-- Facebook Open Graph -->
@@ -20,7 +20,7 @@
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="600" />
 	<meta property="og:image:height" content="314" />
-	<meta property="og:description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta property="og:description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta property="og:site_name" content="Oddox" />
 
 	<!-- Twitter Card -->
@@ -28,13 +28,13 @@
 	<meta name="twitter:site" content="@oddoxorg" />
 	<meta name="twitter:creator" content="@amdelamar" />
 	<meta name="twitter:title" content="Oddox" />
-	<meta name="twitter:description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta name="twitter:description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta name="twitter:image" content="/assets/logo-social-media.png" />
 	<meta name="twitter:domain" content="oddox.org" />
 
 	<!-- Google+ Schema.org -->
 	<meta itemprop="name" content="Oddox" />
-	<meta itemprop="description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta itemprop="description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta itemprop="image" content="/assets/logo-social-media.png" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="https://austindelamar.com/osseous/1.2.0/osseous.min.css" />
 	<link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
 	<link rel="stylesheet" href="css/style.css?v=1">
-	<title>Oddox - Open source blog with an offline-first editor</title>
+	<title>Oddox - open source blog with an offline-first writer</title>
 </head>
 
 <body>
@@ -101,7 +101,7 @@
 				<img src="assets/logo-transparent.png" style="max-width:40rem;" class="padding--top-large padding-left-large padding-right-large full-width" />
 			</div>
 			<div class="twelve columns padding-bottom-large">
-				<h3 class="padding">open source blog with offline-first writer</h3>
+				<h3 class="padding">open source blog with an offline-first writer</h3>
 				<p></p>
 				<a href="/download" class="button button-white">Download</a>&nbsp;
 				<a href="#samples" class="button button-white button-white-outline">View Samples</a>
@@ -230,6 +230,12 @@
 	</div>
 
 	<footer class="row section text-center background-solid-theme" style="background: linear-gradient(0deg,#67d9b8 0%,#4da088 100%);">
+    <span class="text-bold">
+      <a href="/" class="text-black border-none">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/contact" class="text-black border-none">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="/about" class="text-black border-none">About</a>
+    </span>
 		<p>Oddox is an open source project licensed under Apache 2.0 and MIT.</p>
 		<p>
 			<a target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
