--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 		</div>
 	</nav>
 
-	<nav class="navbar background-solid-theme">
+	<nav class="navbar background-solid-theme" style="background: linear-gradient(180deg,#67d9b8 0%,#4da088 100%);">
 
 		<div class="navbar-body container">
 			<div class="nav-item-logo">
