Fix twitter card meta tags

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 	<meta property="og:site_name" content="Oddox" />
 
 	<!-- Twitter Card -->
-	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@oddoxorg" />
 	<meta name="twitter:creator" content="@amdelamar" />
+	<meta name="twitter:type" content="website" /> 
 	<meta name="twitter:title" content="Oddox" />
 	<meta name="twitter:description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta name="twitter:image" content="/assets/logo-social-media.png" />
