--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:type" content="product" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:title" content="Oddox" />
-	<meta property="og:image" content="/assets/logo-social-media.png" />
+	<meta property="og:image" content="https://oddox.org/assets/logo-social-media.png" />
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="600" />
 	<meta property="og:image:height" content="314" />
@@ -27,16 +27,16 @@
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:site" content="@oddoxorg" />
 	<meta name="twitter:creator" content="@amdelamar" />
-	<meta name="twitter:type" content="website" /> 
+	<meta name="twitter:type" content="website" />
 	<meta name="twitter:title" content="Oddox" />
 	<meta name="twitter:description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
-	<meta name="twitter:image" content="/assets/logo-social-media.png" />
+	<meta name="twitter:image" content="https://oddox.org/assets/logo-social-media.png" />
 	<meta name="twitter:domain" content="oddox.org" />
 
 	<!-- Google+ Schema.org -->
 	<meta itemprop="name" content="Oddox" />
 	<meta itemprop="description" content="Oddox is a blog with an offline\-first writer. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
-	<meta itemprop="image" content="/assets/logo-social-media.png" />
+	<meta itemprop="image" content="https://oddox.org/assets/logo-social-media.png" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
 	<link rel="manifest" href="static/manifest.json">
